# strava-mcp

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml  strava-api-v3.yaml
.github/workflows/: release.yml  test.yml
cdk/: .gitignore  README.md  app.py  cdk.json  config.py.example  pyproject.toml
cdk/strava_mcp/: __init__.py  mcp_stack.py
src/strava_mcp/: __init__.py  auth.py  cli.py  client.py  env.py  filters.py  formatters.py  http_auth.py  http_middleware.py  http_session.py  lambda_handler.py  middleware.py  models.py  pagination.py  response_builder.py  server.py  stdio_auth.py  stdio_middleware.py  time_utils.py  types.py
src/strava_mcp/scripts/: __init__.py  setup_auth.py
src/strava_mcp/tools/: __init__.py  activities.py  analysis.py  athlete.py  routes.py  segments.py
tests/: __init__.py  conftest.py  helpers.py  test_activity_tools.py  test_analysis_tools.py  test_athlete_tools.py  test_filters.py  test_formatters.py  test_pagination.py  test_route_tools.py  test_segment_tools.py  test_server.py  test_time_utils.py
tests/fixtures/: __init__.py  activity_fixtures.py  athlete_fixtures.py  route_fixtures.py  segment_fixtures.py
tests/stubs/: __init__.py  strava_api_stub.py
